--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@emotion/styled": "^11.14.0",
     "framer-motion": "^12.7.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.2",
