--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/theghost1980/hive-sbi-onboarding#readme",
   "dependencies": {
     "@hiveio/dhive": "^1.3.2",
+    "dompurify": "^3.2.5",
+    "marked": "^15.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -28,6 +30,8 @@
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
+    "@types/marked": "^5.0.2",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
