--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development --env NODE_ENV=development",
+    "dev": "webpack serve --mode development --env NODE_ENV=development",
     "build": "webpack --mode production --env NODE_ENV=production"
   },
   "repository": {
@@ -22,6 +22,7 @@
   "dependencies": {
     "@hiveio/dhive": "^1.3.2",
     "dompurify": "^3.2.5",
+    "keychain-helper": "^1.0.0",
     "marked": "^15.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
