--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^7.5.1",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
@@ -37,6 +38,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-modal": "^3.16.3",
+    "@types/styled-components": "^5.1.34",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.3",
