--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   "dependencies": {
     "@hiveio/dhive": "^1.3.2",
     "dompurify": "^3.2.5",
+    "i18next": "^25.0.2",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
     "keychain-helper": "^1.0.0",
     "marked": "^15.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.5.1",
