--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react-dom": "^19.1.2",
     "@types/react-modal": "^3.16.3",
     "@types/styled-components": "^5.1.34",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.3",
