--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Simple app to find new HIVE users and onboard them into HIVE SBI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --mode development --env NODE_ENV=development",
     "build": "webpack --mode production --env NODE_ENV=production"
   },
@@ -36,6 +35,7 @@
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@types/dompurify": "^3.0.5",
     "@types/marked": "^5.0.2",
     "@types/node": "^22.14.1",
